 542.	[func]		Add allow-update-forwarding support.

 541.	[func]		Add bogus server support.

 540.	[func]		Add dialup support.

 539.	[func]		Support the blackhole option.

 538.	[bug]		fix buffer overruns by 1 in lwres_getnameinfo().

 537.	[func]		Use transfer-source{-v6} when notify messages.
	
 536.	[func]		Use transfer-source{-v6} when sending refresh queries.
			Transfer-source{-v6} now take a optional port
			parameter for setting the UDP source port.  The port
			parameter is ignored for TCP.

 535.	[func]		Use transfer-source{-v6} when forwarding update
			requests.

 534.	[func]		Ancestors have been removed from RBT chains.  Ancestor
			information can be discerned via node parent pointers.

 533.	[func]		Incorporated name hashing into the RBT database to
			improve search speed.

 532.	[func]		Implement DNS UPDATE pseudo records using
			DNS_RDATA_UPDATE flag.

 531.	[func]		Rdata really should be initalized before being assigned
			to (dns_rdata_fromwire(), dns_rdata_fromtext(),
			dns_rdata_clone(), dns_rdata_fromregion()),
			check that it is.

 530.	[func]		New function dns_rdata_invalidate().

 529.	[bug]		521 contained a bug which caused zones to always
			reload.  [RT #410]
	
 528.	[func]		The ISC_LIST_XXXX macros now perform sanity checks
			on their arguements.  ISC_LIST_XXXXUNSAFE can be use
			to skip the checks however use with caution.

 527.	[func]		New function dns_rdata_clone().

 526.	[bug]		nsupdate incorrectly refused to add RRs with a TTL
			of 0.

 525.	[func]		New arguement 'exact' for dns_db_subtractrdataset(),
			and dns_rdataslab_subtract() requesting that the RR's
			must exist prior to deletion.  DNS_R_NOTEXACT is
			returned if the condition is not met.

 524.	[func]		The 'forward' and 'forwarders' statement in
			non-forward zones should work now.

 523.	[doc]		The source to the Administrator Reference Manual is
			now an XML file using the DocBook DTD, and is included
			in the distribution.  The plain text version of the