@@ -1,3 +1,5 @@
+ 543.	[doc]		The 'port' option is now documented.
+
  542.	[func]		Add allow-update-forwarding support.
 
  541.	[func]		Add bogus server support.
